# zim

./: .gitignore  Cargo.toml  README.md  extract_zim.rs  ipfs_link.rs  link.txt
src/: cluster.rs  directory_entry.rs  directory_iterator.rs  errors.rs  lib.rs  mime_type.rs  namespace.rs  target.rs  uuid.rs  zim.rs
