[package]
name = "zim"
version = "0.1.0"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>", "Andrew Chin <achin@eminence32.net>"]


[dependencies]
byteorder = "^1.2"
memmap = "^0.6"
clap = "^2.23"
stopwatch = "^0.0.7"
pbr = "^1.0"
xz2 = "^0.1"
crossbeam = "^0.3"
bitreader = "^0.3"

[[bin]]
name = "extract_zim"
path = "extract_zim.rs"

[[bin]]
name = "ipfs_link"
path ="ipfs_link.rs"