[package]
name = "zim"
version = "0.2.0"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>", "Andrew Chin <achin@eminence32.net>"]
documentation = "https://docs.rs/zim/"
repository = "https://github.com/dignifiedquire/zim"
homepage = "https://github.com/dignifiedquire/zim"
description = "ZIM reading and extraction"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

keywords = ["parser", "zim"]
categories = ["encoding", "parser-implementations"]

[dependencies]
byteorder = "^1.2"
memmap = "^0.7"
clap = "^2.23"
stopwatch = "^0.0.7"
pbr = "^1.0"
xz2 = "^0.1"
crossbeam = "^0.7"
bitreader = "^0.3"
scoped_threadpool = "^0.1"
num_cpus = "1.12"

[[bin]]
name = "extract_zim"

[[bin]]
name = "ipfs_link"
